Make review box sticky/fixedly positioned when it would otherwise scroll out of view

--- a/resources/less/virkailija-application.less
+++ b/resources/less/virkailija-application.less
@@ -260,6 +260,12 @@ and (max-width: 1000px) {
   padding: 21px;
 }
 
+.application-handling__review-floating {
+  position: fixed;
+  top: 43px;
+  right: 0px;
+}
+
 .application__handling-heading {
   margin-bottom: 15px;
 }
